--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.13.4",
     "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "postcss": "^8.5.6",
