--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
+    "lightningcss": "^1.31.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "postcss": "^8.5.6",
